trunk/Archive2/97/10673a49406975/output
+ clang++ -std=c++11 -O0 -Wall -Wextra -pedantic -Wno-unused-variable main.cpp
main.cpp:41:11: error: read-only variable is not assignable
        i += i; // This must be disallowed
        ~ ^
1 error generated.
